# Ship

./: .gitignore  CMakeLists.txt  CREDITS & LICENSES  LICENSE  StarryStealers.sln  StarryStealers.vcxproj  StarryStealers.vcxproj.filters  kill.sh
data/: planet.mtl  player.mtl  select_arrow.mtl
data/meshes/: debris.mtl  gunner.mtl  mothership.mtl  rocket.mtl  shotgun_item.mtl
raw_data/: debris.blend  debris.blend1  gunner.blend  gunner.blend1  mothership.blend  mothership.blend1  planet.blend  planet.blend1  player.blend  player.blend1  rocket.blend  rocket.blend1  select_arrow.blend  select_arrow.blend1  shotgun_item.blend  shotgun_item.blend1  title.blend  title.blend1  weapon_wheel.blend  weapon_wheel.blend1
src/: Game.cpp  Game.hpp  Menu.cpp  Menu.hpp  ODestroyTheConvoy.cpp  ODestroyTheConvoy.hpp  Objective.cpp  Objective.hpp  Random.cpp  Random.hpp  Renderer.cpp  Renderer.hpp  main.cpp
src/Audio/: Audio.cpp  Audio.hpp
src/Core/: Config.cpp  Config.hpp  Math.cpp  Math.hpp  Timer.cpp  Timer.hpp
src/Events/: Event.hpp  EventQueue.cpp  EventQueue.hpp
src/Input/: Actions.hpp  Input.cpp  Input.hpp  InputController.cpp  InputController.hpp  InputKeyboard.cpp  InputKeyboard.hpp  InputService.hpp
src/Layers/: BackgroundLayer.cpp  BackgroundLayer.hpp  GameLayer.cpp  GameLayer.hpp  HudLayer.cpp  HudLayer.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  MenuBackgroundLayer.cpp  MenuBackgroundLayer.hpp  MenuLayer.cpp  MenuLayer.hpp  SettingsLayer.cpp  SettingsLayer.hpp
src/Physics/: ContactListener.cpp  ContactListener.hpp  DebugDrawer.cpp  DebugDrawer.hpp  (+8 more)
(+102 files in other folders)
